tests/analyzer/errors/undeclared_var.ray
fn main() {
    value = 1

    {
        {
            struct Foo {}
        }

        var foo = Foo{}
    }
}
